test/grammar/schema/check_block/check_block_fail_1/stderr.golden
error[E3M38]: EvaluationError
 --> ${CWD}/main.k:9:11
  |
9 | JohnDoe = Person {
  |           ^ Instance check failed
  |
 --> ${CWD}/main.k:7:1
  |
7 |         age < 140, "age is too large"
  |  Check failed on the condition: age is too large
  |